# ultra-transcription

./: .gitignore  CHANGELOG.md  CHANGES_REMOVE_LARGE_V3.md  CLAUDE.md  CONTRIBUTING.md  INSTALL_GUIDE.md  INSTALL_WINDOWS.md  LICENSE  PROJECT_STATUS.md  README.md  README_SIMPLE.md  README_ja.md  RELEASE_NOTES_v3.0.0.md  RELEASE_NOTES_v3.1.0.md  RELEASE_NOTES_v3.2.0.md  RELEASE_v3.2.1.md  START.bat  UltraTranscribe.bat  UltraTranscribe.py  add_to_path.bat  auto-update.ps1  cleanup.bat  create_exe.bat  create_shortcut.ps1  diagnose.bat  install.bat  prepare_release.sh  pyproject.toml  quick_install_windows.bat  run_windows.bat  setup_powershell.ps1  setup_shortcuts.vbs  setup_windows.bat  test_no_speaker.bat  transcribe-helper.bat  transcribe_gui.py  ultra-transcribe.bat  uninstall.bat
benchmarks/: performance_comparison.json
configs/: system_configs.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DATA_STRUCTURE_IMPROVEMENTS.md  DEVELOPER_GUIDE.md  TEST_ORGANIZATION.md  TROUBLESHOOTING.md  TURBO_PROCESSORS.md  USER_MANUAL.md
test_outputs/organized/: README.md  metadata_summary.json
test_outputs/organized/benchmarks/long_tests/: README.md
test_outputs/organized/benchmarks/medium_tests/: README.md  test_turbo_90s_speaker_20250602.json
test_outputs/organized/benchmarks/short_tests/: README.md  test_turbo_30s_speed_20250602.json
test_outputs/organized/models/large/: README.md
test_outputs/organized/models/medium/: README.md
test_outputs/organized/models/small/: README.md
test_outputs/organized/models/tiny/: README.md
test_outputs/organized/models/turbo/long_tests/: test_21_02_32_turbo_fillers_ultra_precision.csv  test_21_02_32_turbo_fillers_ultra_precision.json  test_21_02_32_turbo_fillers_ultra_precision.srt  test_22_00_57_turbo_fillers_segmented.csv  test_22_00_57_turbo_fillers_segmented.json  test_22_00_57_turbo_fillers_segmented.srt
test_outputs/organized/models/turbo/medium_tests/: test_youtube_rapid_turbo_ultra_precision.csv  test_youtube_rapid_turbo_ultra_precision.json  test_youtube_rapid_turbo_ultra_precision.srt  test_youtube_turbo_fillers_ultra_precision.csv  test_youtube_turbo_fillers_ultra_precision.json  test_youtube_turbo_fillers_ultra_precision.srt
test_outputs/organized/models/turbo/short_tests/: test_turbo_30s_rapid_ultra_precision.csv  test_turbo_30s_rapid_ultra_precision.json
test_outputs/organized/production/final_results/: README.md
test_outputs/organized/reference/performance_baseline/: README.md
test_outputs/organized/reference/quality_baseline/: README.md  final_speaker_test_optimized.csv  final_speaker_test_optimized.json  final_ultra_precision_optimized.csv  final_ultra_precision_optimized.json  gpu_test_cpu_optimized.csv  gpu_test_cpu_optimized.json  speaker_consistency_test_optimized.csv  speaker_consistency_test_optimized.json
test_outputs/organized/systems/large_file_ultra/: README.md
test_outputs/organized/systems/large_file_ultra/large/: large_file_ultra_precision_test_ultra_precision.csv  large_file_ultra_precision_test_ultra_precision.json  test_90s_large_file_ultra.csv  test_90s_large_file_ultra.json  test_90s_large_file_ultra.srt
test_outputs/organized/systems/rapid_ultra/: README.md  rapid_test_1_rapid.csv  rapid_test_1_rapid.json  rapid_test_1_rapid.srt
test_outputs/organized/systems/segmented/: README.md  test_90s_segmented_segmented.csv  test_90s_segmented_segmented.json  test_90s_segmented_segmented.srt  test_90s_turbo_segmented.csv  test_90s_turbo_segmented.json  test_90s_turbo_segmented.srt
test_outputs/organized/systems/segmented/large/: large_file_segmented_partial.csv  large_file_segmented_partial.json  (+1 more)
test_outputs/organized/systems/ultra_precision/: README.md  test_90s_no_speaker_ultra_precision.csv  test_90s_no_speaker_ultra_precision.json  test_90s_no_speaker_ultra_precision.srt  ultra_precision_demo_detailed.json  ultra_short_test_fixed_ultra_precision.csv  ultra_short_test_fixed_ultra_precision.json  ultra_short_test_ultra_precision.csv  ultra_short_test_ultra_precision.json  ultra_short_test_ultra_precision.srt  ultra_short_turbo_test_ultra_precision.json  ultra_short_turbo_test_ultra_precision.srt
test_outputs/organized/uncategorized/: max_precision_test.csv  max_precision_test.json  max_precision_test.srt  segment_000_ultra.csv  segment_000_ultra.json  segment_000_ultra.srt  segment_001_ultra.csv  segment_001_ultra.json  segment_001_ultra.srt  segment_002_ultra.csv  segment_002_ultra.json  segment_002_ultra.srt  segment_003_ultra.csv  segment_003_ultra.json  segment_003_ultra.srt  segment_004_ultra.csv  segment_004_ultra.json  segment_004_ultra.srt  segment_005_ultra.csv  segment_005_ultra.json  segment_005_ultra.srt  segment_006_ultra.csv  segment_006_ultra.json  segment_006_ultra.srt  segment_007_ultra.csv  segment_007_ultra.json  segment_007_ultra.srt  segment_008_ultra.csv  segment_008_ultra.json  segment_008_ultra.srt  segment_009_ultra.csv  segment_009_ultra.json  segment_009_ultra.srt  segment_010_ultra.csv  segment_010_ultra.json  segment_010_ultra.srt
testdata/: 2025-05-31 21_02_32.mp3:Zone.Identifier  2025-05-31 21_02_32_segment_1_enhanced.csv  2025-05-31 21_02_32_segment_1_enhanced.json  2025-05-31 21_02_32_segment_1_enhanced.srt  2025-05-31 21_02_32_segment_1_enhanced.txt  【解説】日本のAI法案はどうなる？　AI規制は進む？　EUやアメリカとはどう違う？【国会審議中】 - YouTube.csv
transcription/: __init__.py  audio_processor.py  chunked_transcriber.py  data_schemas.py  enhanced_audio_processor.py  enhanced_speaker_diarization.py  enhanced_turbo_main.py  enterprise_large_file_processor.py  faster_main.py  faster_transcriber.py  gpu_ultra_precision_main.py  large_file_main.py  large_file_ultra_precision.py  main.py  maximum_precision_main.py  optimized_output_formatter.py  output_formatter.py  pipeline.py  post_processor.py  precision_enhancer.py  predictive_main.py  progress_tracker.py  rapid_ultra_processor.py  result_organizer.py  segmented_processor.py  speaker_diarization.py  streaming_ultra_processor.py  time_estimator.py  transcriber.py  turbo_enhanced_main.py  ultra_main.py  ultra_precision_speaker_main.py
